--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,19 +4,22 @@ on:
   push:
     branches:
       - master 
-      
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout the repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '20'
+
+    - name: Clean Cache
+      run: npm cache clean --force 
 
     - name: Install dependencies
       run: npm install
